--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "keymirror": "^0.1.1",
     "react": "16.0.0",
     "react-native": "^0.53.0",
+    "react-native-phone-call": "^1.0.4",
     "react-native-play-audio": "^0.1.1",
     "react-native-video": "^2.0.0",
     "react-navigation": "^1.0.3",
