--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "expo": {
     "sdkVersion": "23.0.0"
   },
-  "name": "AccessUw",
-  "displayName": "AccessUw"
+  "name": "AccessUW",
+  "displayName": "AccessUW"
 }
